@@ -29,7 +29,7 @@
 
 DIALOGPICTURE   DIALOG DISCARDABLE 16, 16, 160, 138
 STYLE           DS_MODALFRAME | WS_POPUP | WS_CAPTION
-                | WS_SYSMENU | WS_VISIBLE
+                | WS_SYSMENU
 CAPTION         "Fuse - Keyboard"
 BEGIN
   DEFPUSHBUTTON "Close", ID_CLOSE, 108, 122, 50, 14
